Design Login activity theme to greenish/black. Design home model to black/white.
TODO:
Fix themes and have better understanding.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BandIt</string>
+    <string name="app_name">Bandit</string>
     <string name="song_name">Song Name</string>
     <string name="album_name">Album Name</string>
     <string name="title_activity_main2">Main2Activity</string>
